--- a/003. Tools.md
+++ b/003. Tools.md
@@ -4,56 +4,79 @@
 ## 安全工具 
 |編碼|工具名稱|規格|數量|單位|廠牌|工具來源|維修紀錄|
 |:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
-|SS001|安全帽|工地用|15|頂|一般|AHATLx5&大安x10|無|
-|SS002|安全繩|傘背式|6|件|一般|AHA TL|無|
-|SS003|護目鏡|8M|15|支|一般|AHA TL|無|
-|SS004|口罩|M8|60|個|一般|AHA TL|無|
-|SS005|手套|M8|60|雙|一般|AHA TL|無|
+|SS001|安全帽|工地用|6|頂|一般|AHA TL|無|
+|SS002|安全繩|傘背式|2|件|一般|AHA TL|無|
+|SS003|安全繩|腰繫式|4|件|一般|AHA TL|無|
+|SS004|護目鏡|一般|6|支|一般|AHA TL|無|
+|SS005|口罩|一般|1|盒|一般|AHA TL|無|
+|SS006|手套|一般|4|打|一般|AHA TL|無|
 
 ## 手工具 
 |編碼|工具名稱|規格|數量|單位|廠牌|工具來源|維修紀錄|
 |:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
-|HT001|圓鍬|不鏽鋼|3|把|一般|AHA TL|無|
-|HT002|方鏟|不鏽鋼|3|把|一般|AHA TL|無|
-|HT003|捲尺|8M|5|把|一般|AHA TL|毀損報廢x1|
-|HT004|萬能板手|M8|12|把|一般|AHA TL|無|
-|HT005|棘輪板手|M8|12|把|一般|AHA TL|無|
-|HT006|十字起子|一般|6|把|一般|AHATL|無|
-|HT007|尖嘴鉗|一般|3|把|一般|AHATL|無|
-|HT008|老虎鉗|一般|3|把|一般|AHATL|無|
-|HT009|墨斗&墨汁|一般|1|組|一般|AHATL|墨汁用盡|
-|HT010|水線|一般|1|捆|一般|AHATL|無|
-|HT011|直角尺|中|6|把|一般|AHATL|無|
-|HT012|鐵鎚|一般|3|把|一般|AHATL|毀損修復x1(20130824)|
+|HT001|夾具|大|4|把|一般|AHA TL|無|
+|HT002|夾具|小|4|把|一般|AHA TL|無|
+|HT003|捲尺|5.5M|6|把|一般|AHA TL|無|
+|HT004|十字起子|一般|5|把|一般|AHATL|無|
+|HT005|尖嘴鉗|一般|5|把|一般|AHATL|無|
+|HT006|老虎鉗|一般|5|把|一般|AHATL|無|
+|HT007|墨斗&墨汁|一般|1|組|一般|AHATL|無|
+|HT008|水線|一般|1|捆|一般|AHATL|無|
+|HT009|直角尺|中|3|把|一般|AHATL|無|
+|HT010|直角尺|小|4|把|一般|AHATL|無|
+|HT011|鐵鎚|一般|6|把|一般|AHATL|無|
+|HT012|大鐵鎚|一般|1|把|一般|AHATL|無|
+|HT013|老鼠尾|一般|5|把|一般|AHATL|無|
+|HT014|板手|一般|10|支|一般|AHATL|無|
+|HT015|腳架|一般|1|支|一般|AHATL|無|
 
 ## 電動工具 
 |編碼|工具名稱|規格|數量|單位|廠牌|工具來源|維修紀錄|
 |:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
 |PT001|手持線鋸機|GST 8000 E|2|台|BOSCH|AHA TL|無|
 |PT002|手持砂輪機|GWS 7-100|2|台|BOSCH|AHA TL|無|
-|PT003|懸臂式鑽床|立式|1|台|一般|大安|無|
-|PT004|手持式電鑽|BOSCH|3|把|BOSCH|AHA TL|無|
-|PT005|手持式電鑽|BL 1013|2|把|MAKITA|AHA TL|無|
-|PT006|電動拋光機|MT920|2|台|MAKITA|AHATL|無|
-|PT007|修邊機|MT370|2|台|MAKITA|AHATL|無|
+|PT003|懸臂式鑽床|立式|1|台|一般|AHA TL|無|
+|PT004|手持式電鑽|一般|4|把|一般|AHA TL|無|
+|PT005|角度鋸|一般|1|台|一般|AHA TL|無|
 
 ## 氣動工具 
 |編碼|工具名稱|規格|數量|單位|廠牌|工具來源|維修紀錄|
 |:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
 |AT001|空壓機|E35 3.5HP|1|台|士東|AHA TL|無|
-|AT002|氣動拋光機|RC5|3|台|士東|AHA TL|無|
+|AT002|氣動拋光機|RC5|2|台|士東|AHA TL|無|
 |AT003|轉接頭|三叉|1|個|一般|AHA TL|無|
 |AT004|延長氣管|8M|1|條|一般|AHA TL|無|
+|AT005|空氣噴槍|一般|1|支|一般|AHA TL|無|
 
 ## 輔助工具 
 |編碼|工具名稱|規格|數量|單位|廠牌|工具來源|維修紀錄|
 |:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
-|FS001|動力延長線|100M|2|座|一般|AHA TL|無|
-|FS002|地燈|一般|8|個|一般|AHA TL|無|
-|FS003|工作燈|一般|8|個|一般|AHA TL|無|
-|FS004|鷹架|一般|6|座|一般|富山國小|無|
-|FS005|鋁梯|120|2|座|一般|富山國小|無|
-|FS006|工具箱|一般|2|個|一般|AHA TL|無|
+|FS001|動力延長線|100M|4|條|一般|AHA TL|無|
+|FS002|輪座延長線|100M|1|座|一般|AHA TL|無|
+|FS003|地燈|一般|2|個|一般|AHA TL|無|
+|FS004|LED地燈|一般|3|個|一般|AHA TL|無|
+|FS005|工作燈|一般|6|個|一般|AHA TL|無|
+|FS006|頭燈|一般|2|條|一般|AHA TL|無|
+|FS007|工作梯|一般|2|組|一般|卑南國小|無|
 
-
+## 工具耗材 
+|編碼|工具名稱|規格|數量|單位|廠牌|工具來源|維修紀錄|
+|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
+|TC001|長鑽頭|15mm|1|支|一般|AHA TL|無|
+|TC002|長鑽頭|8mm|4|支|一般|AHA TL|無|
+|TC003|金屬鑽尾|10mm|4|支|一般|AHA TL|無|
+|TC004|電鑽套筒|19號|2|支|一般|AHA TL|無|
+|TC005|圓形砂紙|100號|2|盒|一般|AHA TL|無|
+|TC006|砂紙|150號|1|盒|一般|AHA TL|無|
+|TC007|砂紙|240號|1|盒|一般|AHA TL|無|
+|TC008|線鋸刀片|一般|1|盒|BOSCH|AHA TL|無|
+|TC009|地燈管|鹵素燈500W|14|個|一般|AHA TL|無|
+|TC010|工作燈泡|60W|10|個|一般|AHA TL|無|
+|TC011|砂輪片|磨(厚片)|5|片|一般|AHA TL|無|
+|TC012|砂輪片|切(細片)|10|片|一般|AHA TL|無|
+|TC013|油漆刷|一般|10|把|一般|AHA TL|無|
+|TC014|鉛筆|一般|10|支|一般|AHA TL|無|
+|TC015|麥克筆|一般|5|支|一般|AHA TL|無|
+|TC016|鋼釘|一般|1|盒|一般|AHA TL|無|
+|TC017|鑽頭組|一般|3|盒|一般|AHA TL|無
 
