--- a/003. Tools.md
+++ b/003. Tools.md
@@ -27,7 +27,7 @@
 |HT011|鐵鎚|一般|6|把|一般|AHATL|無|
 |HT012|大鐵鎚|一般|1|把|一般|AHATL|無|
 |HT013|老鼠尾|一般|5|把|一般|AHATL|無|
-|HT014|板手|一般|10|支|一般|AHATL|無|
+|HT014|梅開板手|一般|4|支|一般|AHATL|無|
 |HT015|腳架|一般|1|支|一般|AHATL|無|
 
 ## 電動工具 
