--- a/003. Tools.md
+++ b/003. Tools.md
@@ -9,7 +9,7 @@
 |SS003|安全繩|腰繫式|4|件|一般|AHA TL|無|
 |SS004|護目鏡|一般|6|支|一般|AHA TL|無|
 |SS005|口罩|一般|1|盒|一般|AHA TL|無|
-|SS006|手套|一般|4|打|一般|AHA TL|無|
+|SS006|手套|一般|2|打|一般|AHA TL|無|
 
 ## 手工具 
 |編碼|工具名稱|規格|數量|單位|廠牌|工具來源|維修紀錄|
@@ -29,6 +29,8 @@
 |HT013|老鼠尾|一般|5|把|一般|AHATL|無|
 |HT014|梅開板手|一般|4|支|一般|AHATL|無|
 |HT015|腳架|一般|1|支|一般|AHATL|無|
+|HT016|起子套筒深孔|14mm|1|支|一般|AHATL|無|
+|HT017|起子套筒|14mm*65mm|2|支|一般|AHATL|無|
 
 ## 電動工具 
 |編碼|工具名稱|規格|數量|單位|廠牌|工具來源|維修紀錄|
@@ -78,5 +80,8 @@
 |TC014|鉛筆|一般|10|支|一般|AHA TL|無|
 |TC015|麥克筆|一般|5|支|一般|AHA TL|無|
 |TC016|鋼釘|一般|1|盒|一般|AHA TL|無|
-|TC017|鑽頭組|一般|3|盒|一般|AHA TL|無
+|TC017|鑽頭組|一般|3|盒|一般|AHA TL|無|
+|TC018|OB白鐵含鈷鑽頭|12mm|1|支|一般|AHA TL|無|
+|TC019|板模鑽尾|4分3尺|1|支|一般|AHA TL|無|
+|TC020|木工筆|一般|2|支|一般|AHA TL|無|
 
