--- a/003. Tools.md
+++ b/003. Tools.md
@@ -84,4 +84,7 @@
 |TC018|OB白鐵含鈷鑽頭|12mm|1|支|一般|AHA TL|無|
 |TC019|板模鑽尾|4分3尺|1|支|一般|AHA TL|無|
 |TC020|木工筆|一般|2|支|一般|AHA TL|無|
-
+|TC021|長毛刷|3"|6|把|一般|AHA TL|無|
+|TC022|長毛刷|2"|6|把|一般|AHA TL|無|
+|TC023|長毛刷|1"|6|把|一般|AHA TL|無|
+|TC021|白膠|一般|1|包|一般|AHA TL|無|
