--- a/003. Tools.md
+++ b/003. Tools.md
@@ -87,4 +87,9 @@
 |TC021|長毛刷|3"|6|把|一般|AHA TL|無|
 |TC022|長毛刷|2"|6|把|一般|AHA TL|無|
 |TC023|長毛刷|1"|6|把|一般|AHA TL|無|
-|TC021|白膠|一般|1|包|一般|AHA TL|無|
+|TC024|白膠|一般|1|包|一般|AHA TL|無|
+|TC025|油漆塑膠桶|一般|6|個|一般|AHA TL|無|
+|TC026|香蕉水|5加侖|1|桶|一般|AHA TL|無|
+|TC027|二度底漆|一般|1|罐|一般|AHA TL|無|
+|TC028|木栓|12*40|100|只|一般|AHA TL|無|
+
