--- a/003. Tools.md
+++ b/003. Tools.md
@@ -92,4 +92,5 @@
 |TC026|香蕉水|5加侖|1|桶|一般|AHA TL|無|
 |TC027|二度底漆|一般|1|罐|一般|AHA TL|無|
 |TC028|木栓|12*40|100|只|一般|AHA TL|無|
+|TC029|帆布|PE(厚)|4|嶺|一般|AHA TL|無|
 
